Solved size of modals on index page, changed alignment of de side bar from the dashboard, updated the getVerified() function, and I dont remember much more

--- a/project/app/static/css/main.css
+++ b/project/app/static/css/main.css
@@ -485,8 +485,6 @@ button:focus{
 }
 .imageThumbnailInMenu {
   object-fit: cover;
-  width: 240px;
-  height: 240px;
 }
 .imagePath {
   margin: 2% 0%;
